# tldrist

./: .gitignore  Dockerfile  LICENSE  README.md  cloudbuild-pr.yaml  cloudbuild.yaml  pyproject.toml
scripts/: cleanup_failure_comments.py
src/tldrist/: __init__.py  config.py  main.py  models.py
src/tldrist/api/: __init__.py  auth.py  models.py  routes.py
src/tldrist/clients/: __init__.py  article.py  gemini.py  gmail.py  nyt.py  storage.py  todoist.py  tts.py
src/tldrist/services/: __init__.py  digest.py  orchestrator.py  podcast.py  summarizer.py
src/tldrist/utils/: __init__.py  logging.py  secrets.py
terraform/: artifact_registry.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_article.py  test_digest.py  test_gemini.py  test_gmail.py  test_nyt.py  test_orchestrator.py  test_services.py  test_todoist.py
